# Project_cpp

./: CMakeLists.txt  documentation_template_eit_en (1).docx
include/: definitions.hpp  display.hpp  fruit.hpp  game.hpp  logic.hpp  score.hpp  snake.hpp
src/: display.cpp  fruit.cpp  game.cpp  logic.cpp  main.cpp  score.cpp  snake.cpp
